--- a/formulario-radix-rj.html
+++ b/formulario-radix-rj.html
@@ -252,7 +252,7 @@
         
         <div class="form-content">
             <div class="form-group">
-                <label>A área de atuação da empresa é "core" da Radix, ou seja, homocentro/profissionais OLT prestando o mesmo tipo de serviço da empresa?</label>
+                <label>A área de atuação da empresa é "core" da Radix, ou seja, homocentro/profissionais CLT prestando o mesmo tipo de serviço da empresa?</label>
                 <div class="radio-group">
                     <div class="radio-item">
                         <input type="radio" id="core-sim" name="area-core" value="sim">
